Revise resume layout and content
Updated the HTML structure and content of the resume page.

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 
       <section>
         <h2>Profile</h2>
-        <p>Currently a Second-year Computer Science student proficient in Java, C, Python and SQL basics. Strong problem-solving skills, self-learner, and hands-on with Java programming, debugging, and algorithm design. Currently learing MERN and web dev. Seeking an internship to gain industry experience and contribute effectively.</p>
-        <p>I really get how important it is to find a career that matches your passions, and I'm just as excited about CSE!</p>
+        <p>Currently a Second-year Computer Science student proficient in Java, C, Python and SQL basics. Currently learing MERN and web dev. Seeking an internship to gain industry experience and contribute effectively.</p>
       </section>
 
       <section>
@@ -184,3 +183,4 @@
   </div>
 </body>
 </html>
+
