--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <h2>Education</h2>
         <ul>
           <li><b>Ajeenkya DY Patil University</b> — B.Tech Computer Science (Expected Graduation: June 2028)</li>
-          <li><b>Relevant course work</b>- MERN, DSA, Operating System, Intelligent</li>
+          <li><b>Relevant course work</b>- MERN, DSA, Operating System, Intelligent Agent, AI </li>
           <li><b>Class XII</b> — 2022–2023</li>
           <li><b>Class X</b> — 2020–2021</li>
         </ul>
@@ -183,4 +183,5 @@
   </div>
 </body>
 </html>
+
 
